- Commented app.js old APIs and created new APIs based on the new design. - Created stockin page. - Completed partial functionalities on stockin page.

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -20,7 +20,7 @@
     </style>
     <body>
         <div class="jumbotron text-center">
-            <h1>Stepp Health Footwear</h1>
+            <h1>STEPP HEALTH FOOTWEARS</h1>
         </div>
         <div class="container">
             <div class="row rowcustomcss">
