- Added check stock functionality.

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -58,7 +58,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Check availabe stocks</h5>
                             <p class="card-text">Search a product and check for the availabe stock in store at present.</p>
-                            <a href="#" class="btn btn-primary">Check Now</a>
+                            <a href="checkstock.html" class="btn btn-primary">Check Now</a>
                         </div>
                     </div>
                 </div>
