--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss">
+                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
                         <div class="card-body">
                             <h5 class="card-title">Stock In</h5>
                             <p class="card-text">Update the incoming product details which was purchased from the dealer.</p>
@@ -34,7 +34,7 @@
                     </div>
                 </div>            
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss">
+                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
                         <div class="card-body">
                             <h5 class="card-title">Stock Sale</h5>
                             <p class="card-text">Update the product details which was sold/delivered to the customer.</p>
@@ -47,14 +47,14 @@
                         <div class="card-body">
                             <h5 class="card-title">Scan</h5>
                             <p class="card-text">Update the scan related transaction.</p>
-                            <a href="stocksale.html" class="btn btn-primary">Add Now</a>
+                            <a href="#" class="btn btn-primary">Add Now</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss">
+                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
                         <div class="card-body">
                             <h5 class="card-title">Check availabe stocks</h5>
                             <p class="card-text">Search a product and check for the availabe stock in store at present.</p>
