--- a/01_frontend_UI_app/stocksale.html
+++ b/01_frontend_UI_app/stocksale.html
@@ -73,52 +73,69 @@
                   </div>
                 </div>
                 <div id="second_section_id">
-                    <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Rate Per Piece*</label>
-                        <div class="col-sm-10">
-                          <div class="input-group">
-                            <div class="input-group-prepend">
-                              <div class="input-group-text">₹</div>
-                            </div>
-                            <input type="text" class="form-control" id="model_rate_per_piece_id" placeholder="Enter rate per piece">
-                          </div>
-                        </div>
+                  <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Available Count</label>
+                    <div class="col-sm-10">
+                      <label id="available_count_id" style="padding-top: 7px; padding-left: 10px;"></label>
                     </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Stock-sale Date*</label>
-                        <div class="col-sm-10">
-                          <input type="datetime-local" class="form-control" id="txn_date_id">
+                  </div>
+                  <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Rate Per Piece*</label>
+                    <div class="col-sm-10">
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text">₹</div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Bill Number*</label>
-                        <div class="col-sm-10">
-                          <input type="text" class="form-control" id="txn_bill_no_id" placeholder="Enter bill number">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Total Quantity*</label>
-                        <div class="col-sm-10">
-                          <input type="number" onkeydown="javascript: return event.keyCode === 8 || event.keyCode === 46 ? true : !isNaN(Number(event.key))" class="form-control" id="txn_quantity_id" placeholder="Enter total number of pieces stocked up">
-                        </div>
+                        <input type="text" class="form-control" id="model_rate_per_piece_id" placeholder="Enter rate per piece">
                       </div>
-                      <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Customization Cost</label>
-                        <div class="col-sm-10">
-                          <div class="input-group">
-                            <div class="input-group-prepend">
-                              <div class="input-group-text">₹</div>
-                            </div>
-                            <input type="text" class="form-control" id="customization_cost_id" placeholder="Enter customization cost">
-                          </div>
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Comments</label>
-                        <div class="col-sm-10">
-                          <textarea class="form-control" rows="3" id="comments_id" placeholder="Enter comments (if any)"></textarea>
-                        </div>
                     </div>
+                  </div>
+                  <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Discount</label>
+                    <div class="col-sm-10">
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text">₹</div>
+                        </div>
+                        <input type="text" class="form-control" id="discounts_id" placeholder="Enter discount provided per piece">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                      <label class="col-sm-2 col-form-label">Stock-sale Date*</label>
+                      <div class="col-sm-10">
+                        <input type="datetime-local" class="form-control" id="txn_date_id">
+                      </div>
+                  </div>
+                  <div class="form-group row">
+                      <label class="col-sm-2 col-form-label">Bill Number*</label>
+                      <div class="col-sm-10">
+                        <input type="text" class="form-control" id="txn_bill_no_id" placeholder="Enter bill number">
+                      </div>
+                  </div>
+                  <div class="form-group row">
+                      <label class="col-sm-2 col-form-label">Total Quantity*</label>
+                      <div class="col-sm-10">
+                        <input type="number" onkeydown="javascript: return event.keyCode === 8 || event.keyCode === 46 ? true : !isNaN(Number(event.key))" class="form-control" id="txn_quantity_id" placeholder="Enter total number of pieces stocked up">
+                      </div>
+                  </div>
+                  <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Customization Cost</label>
+                    <div class="col-sm-10">
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text">₹</div>
+                        </div>
+                        <input type="text" class="form-control" id="customization_cost_id" placeholder="Enter customization cost">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Comments</label>
+                    <div class="col-sm-10">
+                      <textarea class="form-control" rows="3" id="comments_id" placeholder="Enter comments (if any)"></textarea>
+                    </div>
+                  </div>
                 </div>
                 <div style="float: right;">
                     <button type="button" class="btn btn-primary" id="confirm_id" onclick="confirmBtnClick()">Confirm Product</button>
