- Added "add product" api on the node js app. - Added "add product" module on the front end app.

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -25,6 +25,35 @@
         <div class="container">
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
+                    <div class="card cardcustomcss">
+                        <div class="card-body">
+                            <h5 class="card-title">View Transaction Dashboard</h5>
+                            <p class="card-text">View transactions for a particular date range.</p>
+                            <a href="#" class="btn btn-primary">Check Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
+                        <div class="card-body">
+                            <h5 class="card-title">Check availabe stocks</h5>
+                            <p class="card-text">Search a product and check for the availabe stock in store at present.</p>
+                            <a href="checkstock.html" class="btn btn-primary">Check Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                        <div class="card-body">
+                            <h5 class="card-title">Add Product</h5>
+                            <p class="card-text">Add new product to inventory.</p>
+                            <a href="addproduct.html" class="btn btn-primary">Add Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row rowcustomcss">
+                <div class="col-sm-4">
                     <div class="card cardcustomcss" style="background-color: lightsteelblue;">
                         <div class="card-body">
                             <h5 class="card-title">Stock In</h5>
@@ -45,35 +74,6 @@
                 <div class="col-sm-4">
                     <div class="card cardcustomcss">
                         <div class="card-body">
-                            <h5 class="card-title">Scan</h5>
-                            <p class="card-text">Update the scan related transaction.</p>
-                            <a href="#" class="btn btn-primary">Add Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row rowcustomcss">
-                <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
-                        <div class="card-body">
-                            <h5 class="card-title">Check availabe stocks</h5>
-                            <p class="card-text">Search a product and check for the availabe stock in store at present.</p>
-                            <a href="checkstock.html" class="btn btn-primary">Check Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card cardcustomcss">
-                        <div class="card-body">
-                            <h5 class="card-title">View Transaction Dashboard</h5>
-                            <p class="card-text">View transactions for a particular date range.</p>
-                            <a href="#" class="btn btn-primary">Check Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card cardcustomcss">
-                        <div class="card-body">
                             <h5 class="card-title">Stock Transfer</h5>
                             <p class="card-text">Update the product details which was transferred to other shop/dealers.</p>
                             <a href="#" class="btn btn-primary">Add Now</a>
@@ -87,6 +87,15 @@
                         <div class="card-body">
                             <h5 class="card-title">Other transactions</h5>
                             <p class="card-text">Update other income/expense transactions.</p>
+                            <a href="#" class="btn btn-primary">Add Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card cardcustomcss">
+                        <div class="card-body">
+                            <h5 class="card-title">Scan</h5>
+                            <p class="card-text">Update the scan related transaction.</p>
                             <a href="#" class="btn btn-primary">Add Now</a>
                         </div>
                     </div>
