- Added "stock in" feature. - Updated stocks availability feature.

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -34,11 +34,11 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
+                    <div class="card cardcustomcss" style="background-color: lightgreen;">
                         <div class="card-body">
-                            <h5 class="card-title">Check availabe stocks</h5>
-                            <p class="card-text">Search a product and check for the availabe stock in store at present.</p>
-                            <a href="checkstock.html" class="btn btn-primary">Check Now</a>
+                            <h5 class="card-title">View Availabe Stocks</h5>
+                            <p class="card-text">View product inventory and know the availabe stock information.</p>
+                            <a href="viewproducts.html" class="btn btn-primary">View Now</a>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     <div class="card cardcustomcss" style="background-color: lightgreen;">
                         <div class="card-body">
                             <h5 class="card-title">Add Product</h5>
-                            <p class="card-text">Add new product to inventory.</p>
+                            <p class="card-text">Add new product to inventory by specifying the model, size and color.</p>
                             <a href="addproduct.html" class="btn btn-primary">Add Now</a>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
             </div>
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
+                    <div class="card cardcustomcss" style="background-color: lightgreen;">
                         <div class="card-body">
                             <h5 class="card-title">Stock In</h5>
                             <p class="card-text">Update the incoming product details which was purchased from the dealer.</p>
