- Added "view transactions" feature. - Added "other transactions" feature. - Removed "check stock" html and js files. - Added reusable functions in common.js

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -25,11 +25,11 @@
         <div class="container">
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss">
+                    <div class="card cardcustomcss" style="background-color: lightgreen;">
                         <div class="card-body">
                             <h5 class="card-title">View Transaction Dashboard</h5>
                             <p class="card-text">View transactions for a particular date range.</p>
-                            <a href="#" class="btn btn-primary">Check Now</a>
+                            <a href="viewtransactions.html" class="btn btn-primary">Check Now</a>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     </div>
                 </div>            
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightsteelblue;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">Stock Sale</h5>
                             <p class="card-text">Update the product details which was sold/delivered to the customer.</p>
@@ -83,11 +83,11 @@
             </div>
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss">
+                    <div class="card cardcustomcss" style="background-color: lightgreen;">
                         <div class="card-body">
                             <h5 class="card-title">Other transactions</h5>
                             <p class="card-text">Update other income/expense transactions.</p>
-                            <a href="#" class="btn btn-primary">Add Now</a>
+                            <a href="othertransactions.html" class="btn btn-primary">Add Now</a>
                         </div>
                     </div>
                 </div>
