- Added "Scan" feature. - Fixed UI issues. - Added CSS icons for data tables.

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -92,11 +92,11 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss">
+                    <div class="card cardcustomcss" style="background-color: lightgreen;">
                         <div class="card-body">
                             <h5 class="card-title">Scan</h5>
                             <p class="card-text">Update the scan related transaction.</p>
-                            <a href="#" class="btn btn-primary">Add Now</a>
+                            <a href="scan.html" class="btn btn-primary">Add Now</a>
                         </div>
                     </div>
                 </div>
