--- a/01_frontend_UI_app/othertransactions.html
+++ b/01_frontend_UI_app/othertransactions.html
@@ -33,7 +33,7 @@
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label">Date*</label>
                   <div class="col-sm-10">
-                    <input type="date" class="form-control" id="date" placeholder="yyyy-mm-dd">
+                    <input type="date" class="form-control" style="width: 24%;" id="date" placeholder="yyyy-mm-dd">
                   </div>
                 </div>
                 <div class="form-group row">
