--- a/01_frontend_UI_app/viewtransactions.html
+++ b/01_frontend_UI_app/viewtransactions.html
@@ -21,23 +21,21 @@
         </div>
         <div class="container">
             <form>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">From Date*</label>
-                    <div class="col-sm-10">
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <label for="from_date">From Date*</label>
                         <input type="date" class="form-control" id="from_date">
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">To Date*</label>
-                    <div class="col-sm-10">
+                    <div class="col-md-4 mb-3">
+                        <label for="to_date">To Date*</label>
                         <input type="date" class="form-control" id="to_date">
+                    </div>
+                    <div style="float: right; margin: 2.8% 2% 2% 2%;">
+                        <a id="go_back_id" href="index.html" class="btn btn-primary">Go Back</a>
+                        <button id="get_txn_btn" type="button" class="btn btn-primary" onclick="getTxns()">Get Transactions</button>
                     </div>
                 </div>
             </form>
-            <div style="float: right; margin: 2%;">
-                <button id="get_txn_btn" type="button" class="btn btn-primary" onclick="getTxns()">Get Transactions</button>
-                <a id="go_back_id" href="index.html" class="btn btn-primary">Go Back</a>
-            </div>
             <table id="transacrions_tbl" class="display" width="100%"></table>
         </div>
     </body>
