- Added "Stock Sale" feature. - Fixed UI issues in "Stock In" page. - Updated common.js file.

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>            
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss">
+                    <div class="card cardcustomcss" style="background-color: lightgreen;">
                         <div class="card-body">
                             <h5 class="card-title">Stock Sale</h5>
                             <p class="card-text">Update the product details which was sold/delivered to the customer.</p>
