--- a/01_frontend_UI_app/stockin.html
+++ b/01_frontend_UI_app/stockin.html
@@ -27,31 +27,31 @@
                   </div>
                 </div>
                 <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Bill Date*</label>
-                  <div class="col-sm-10">
-                    <input type="date" class="form-control" style="width: 24%;" id="bill_date" placeholder="yyyy-mm-dd">
-                  </div>
-                </div>
-                <div class="form-group row">
                   <label class="col-sm-2 col-form-label">Bill Amount*</label>
                   <div class="col-sm-10">
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <div class="input-group-text">₹</div>
                       </div>
-                      <input type="text" class="form-control" id="bill_amt" readonly="true" placeholder="Total bill amount">
+                      <input type="text" class="form-control" id="bill_amt" readonly="true" placeholder="Total bill amount will be auto-calculated">
                     </div>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Bill Date*</label>
+                  <div class="col-sm-10">
+                    <input type="date" class="form-control" style="width: 24%;" id="bill_date" placeholder="yyyy-mm-dd">
                   </div>
                 </div>
                 <table class="table">
                   <thead>
-                    <tr>
-                      <th style="width: 18%; padding-left: 18px;">Model*</th>
-                      <th style="width: 18%; padding-left: 18px;">Size*</th>
-                      <th style="width: 18%; padding-left: 18px;">Color*</th>
-                      <th style="width: 18%; padding-left: 18px;">Quantity*</th>
-                      <th style="width: 18%; padding-left: 18px;">Amount*</th>
-                      <th style="width: 10%; padding-left: 18px;"></th>
+                    <tr style="text-align: center;">
+                      <th style="width: 18%;">Model*</th>
+                      <th style="width: 18%;">Size*</th>
+                      <th style="width: 18%;">Color*</th>
+                      <th style="width: 18%;">Quantity*</th>
+                      <th style="width: 18%;">Amount*</th>
+                      <th style="width: 10%;"></th>
                     </tr>
                   </thead>
                   <tbody id="prdTbl"></tbody>
