--- a/01_frontend_UI_app/stocksale.html
+++ b/01_frontend_UI_app/stocksale.html
@@ -12,6 +12,7 @@
         <script src="scripts/stocksale.js"></script>
     </head>
     <style>
+      svg { cursor: pointer; }
     </style>
     <body>
         <div class="jumbotron text-center" style="padding: 1%;">
@@ -20,127 +21,49 @@
         <div class="container">
             <form>
                 <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Model*</label>
+                  <label class="col-sm-2 col-form-label">Bill Number*</label>
                   <div class="col-sm-10">
-                    <select id="model_no_id" class="form-control"></select>
+                    <input type="text" class="form-control" id="bill_no" placeholder="Enter bill number">
                   </div>
                 </div>
                 <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Model Type*</label>
+                  <label class="col-sm-2 col-form-label">Bill Amount*</label>
                   <div class="col-sm-10">
-                    <select id="model_type_id" class="form-control">
-                      <option value="standard">Standard</option>
-                      <option value="customized">Customized</option>
-                    </select>
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">₹</div>
+                      </div>
+                      <input type="text" class="form-control" id="bill_amt" readonly="true" placeholder="Total bill amount will be auto-calculated">
+                    </div>
                   </div>
                 </div>
                 <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Model Size*</label>
+                  <label class="col-sm-2 col-form-label">Bill Date*</label>
                   <div class="col-sm-10">
-                    <select id="model_size_id" class="form-control">
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                      <option value="6">6</option>
-                      <option value="7">7</option>
-                      <option value="8">8</option>
-                      <option value="9">9</option>
-                      <option value="10">10</option>
-                      <option value="11">11</option>
-                      <option value="12">12</option>
-                      <option value="13">13</option>
-                      <option value="14">14</option>
-                      <option value="15">15</option>
-                      <option value="16">16</option>
-                      <option value="17">17</option>
-                      <option value="18">18</option>
-                      <option value="19">19</option>
-                      <option value="20">20</option>
-                    </select>
+                    <input type="date" class="form-control" style="width: 24%;" id="bill_date" placeholder="yyyy-mm-dd">
                   </div>
                 </div>
-                <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Model Color*</label>
-                  <div class="col-sm-10">
-                    <select id="model_color_id" class="form-control">
-                      <option value="Black">Black</option>
-                      <option value="Cherry">Cherry</option>
-                      <option value="Brown">Brown</option>
-                      <option value="Sandal/Tan">Sandal/Tan</option>
-                    </select>
-                  </div>
-                </div>
-                <div id="second_section_id">
-                  <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Available Count</label>
-                    <div class="col-sm-10">
-                      <label id="available_count_id" style="padding-top: 7px; padding-left: 10px;"></label>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Rate Per Piece*</label>
-                    <div class="col-sm-10">
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">₹</div>
-                        </div>
-                        <input type="text" class="form-control" id="model_rate_per_piece_id" placeholder="Enter rate per piece">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Discount</label>
-                    <div class="col-sm-10">
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">₹</div>
-                        </div>
-                        <input type="text" class="form-control" id="discounts_id" placeholder="Enter discount provided per piece">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                      <label class="col-sm-2 col-form-label">Stock-sale Date*</label>
-                      <div class="col-sm-10">
-                        <input type="datetime-local" class="form-control" id="txn_date_id">
-                      </div>
-                  </div>
-                  <div class="form-group row">
-                      <label class="col-sm-2 col-form-label">Bill Number*</label>
-                      <div class="col-sm-10">
-                        <input type="text" class="form-control" id="txn_bill_no_id" placeholder="Enter bill number">
-                      </div>
-                  </div>
-                  <div class="form-group row">
-                      <label class="col-sm-2 col-form-label">Total Quantity*</label>
-                      <div class="col-sm-10">
-                        <input type="number" onkeydown="javascript: return event.keyCode === 8 || event.keyCode === 46 ? true : !isNaN(Number(event.key))" class="form-control" id="txn_quantity_id" placeholder="Enter total number of pieces stocked up">
-                      </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Customization Cost</label>
-                    <div class="col-sm-10">
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">₹</div>
-                        </div>
-                        <input type="text" class="form-control" id="customization_cost_id" placeholder="Enter customization cost">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Comments</label>
-                    <div class="col-sm-10">
-                      <textarea class="form-control" rows="3" id="comments_id" placeholder="Enter comments (if any)"></textarea>
-                    </div>
-                  </div>
+                <table class="table">
+                  <thead>
+                    <tr style="text-align: center;">
+                      <th style="width: 15%;">Model*</th>
+                      <th style="width: 9%;">Size*</th>
+                      <th style="width: 13%;">Color*</th>
+                      <th style="width: 13%;">Cost Type*</th>
+                      <th style="width: 11%;">Quantity*</th>
+                      <th style="width: 16%;">Purchase Amount*</th>
+                      <th style="width: 16%;">Sale Amount*</th>
+                      <th style="width: 3%;"></th>
+                    </tr>
+                  </thead>
+                  <tbody id="prdTbl"></tbody>
+                </table>
+                <div style="float: left;">
+                  <button type="button" class="btn btn-primary" onclick="addRow()">Add</button>
                 </div>
                 <div style="float: right;">
-                    <button type="button" class="btn btn-primary" id="confirm_id" onclick="confirmBtnClick()">Confirm Product</button>
-                    <button type="button" class="btn btn-primary" id="submit_id" onclick="stocksaleBtnClick()">Submit</button>
-                    <a id="go_back_id" href="index.html" class="btn btn-primary">Go Back</a>
+                  <button type="button" class="btn btn-primary" onclick="stockSaleBtnClick()">Submit</button>
+                  <a id="go_back_id" href="index.html" class="btn btn-primary">Go Back</a>
                 </div>
             </form>
         </div>
