- Added "Stock Transfer" feature. - Performed code clean up.

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">View Transaction Dashboard</h5>
                             <p class="card-text">View transactions for a particular date range.</p>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">View Availabe Stocks</h5>
                             <p class="card-text">View product inventory and know the availabe stock information.</p>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">Add Product</h5>
                             <p class="card-text">Add new product to inventory by specifying the model, size and color.</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">Stock In</h5>
                             <p class="card-text">Update the incoming product details which was purchased from the dealer.</p>
@@ -63,7 +63,7 @@
                     </div>
                 </div>            
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">Stock Sale</h5>
                             <p class="card-text">Update the product details which was sold/delivered to the customer.</p>
@@ -76,14 +76,14 @@
                         <div class="card-body">
                             <h5 class="card-title">Stock Transfer</h5>
                             <p class="card-text">Update the product details which was transferred to other shop/dealers.</p>
-                            <a href="#" class="btn btn-primary">Add Now</a>
+                            <a href="stocktransfer.html" class="btn btn-primary">Add Now</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row rowcustomcss">
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">Other transactions</h5>
                             <p class="card-text">Update other income/expense transactions.</p>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="card cardcustomcss" style="background-color: lightgreen;">
+                    <div class="card cardcustomcss">
                         <div class="card-body">
                             <h5 class="card-title">Scan</h5>
                             <p class="card-text">Update the scan related transaction.</p>
