--- a/01_frontend_UI_app/stocktransfer.html
+++ b/01_frontend_UI_app/stocktransfer.html
@@ -9,14 +9,14 @@
         <script src="scripts/libs/popper.min.js"></script>
         <script src="scripts/libs/bootstrap.min.js"></script>
         <script src="scripts/common.js"></script>
-        <script src="scripts/stocksale.js"></script>
+        <script src="scripts/stocktransfer.js"></script>
     </head>
     <style>
       svg { cursor: pointer; }
     </style>
     <body>
         <div class="jumbotron text-center" style="padding: 1%;">
-            <h1>STEPP - STOCK SALE</h1>
+            <h1>STEPP - STOCK TRANSFER</h1>
         </div>
         <div class="container">
             <form>
